# coq-vsu-int_or_ptr

./: Makefile  README.md  _CoqProject  coq-int63.opam  coq-int_or_ptr.opam  coq-vsu-int_or_ptr-src.opam  coq-vsu-int_or_ptr-vst-32.opam  coq-vsu-int_or_ptr-vst.opam  coq-vsu-int_or_ptr.opam
.github/workflows/: build.yml
src/c/include/coq-vsu-int_or_ptr/: int_or_ptr.h
src/c/include/coq-vsu-int_or_ptr/src/: int_or_ptr.c
theories/int_or_ptr/model/: int_or_ptr.v
theories/int_or_ptr/vst/ast/: ast.v
theories/int_or_ptr/vst/clightgen/x86_32-linux/: int_or_ptr.v
theories/int_or_ptr/vst/clightgen/x86_64-linux/: int_or_ptr.v
theories/int_or_ptr/vst/cmodel/: constants.v  val.v
theories/int_or_ptr/vst/spec/: spec.v
theories/int_or_ptr/vst/verif/: verif.v  vsu.v
