opam-version: "2.0"
name: "int_or_ptr"
version: "1.0"
maintainer: "appliedfm"
homepage: "https://github.com/appliedfm/coq-vsu-int_or_ptr"
dev-repo: "git+https://github.com/appliedfm/coq-vsu-int_or_ptr.git"
bug-reports: "https://github.com/appliedfm/coq-vsu-int_or_ptr/issues"
license: "https://github.com/appliedfm/coq-vsu-int_or_ptr/blob/main/LICENSE"
authors: ["Tim Carstens" "appliedfm"]
build: []
install: [
    make "install-src"
]
depends: [
    "coq-vsu"
]
synopsis: "Formally specified functions for using pointers as integers"
description: """int_or_ptr

Formally specified functions for using pointers as integers, implemented in C and proven in Coq. Powered by VST.
"""