opam-version: "2.0"
name: "int_or_ptr"
version: "1.0"
maintainer: "appliedfm"
homepage: "https://github.com/appliedfm/coq-vsu-int_or_ptr"
dev-repo: "git+https://github.com/appliedfm/coq-vsu-int_or_ptr.git"
bug-reports: "https://github.com/appliedfm/coq-vsu-int_or_ptr/issues"
license: "https://github.com/appliedfm/coq-vsu-int_or_ptr/blob/main/LICENSE"
authors: ["Tim Carstens" "appliedfm"]
build: [
    [make "verydeepclean"]
    [make "BITSIZE=64" "SRC=opam" "PACKAGE_NAME=coq-vsu-int_or_ptr-vst" "SUBPROJECT=vst" "J=%{jobs}%"]
]
install: [
    make "BITSIZE=64" "SRC=opam" "PACKAGE_NAME=coq-vsu-int_or_ptr-vst" "SUBPROJECT=vst" "install-vst"
]
depends: [
    "coq" {>= "8.13.2"}
    "coq-compcert" {= "3.9"}
    "coq-vst" {= "2.8"}
    "coq-vsu"
    "coq-vsu-int_or_ptr-src" {= version}
]
synopsis: "Formally specified functions for using pointers as integers"
description: """int_or_ptr

Formally specified functions for using pointers as integers, implemented in C and proven in Coq. Powered by VST.
"""